文字コードをUTF-8からShift JISに変更

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# --------------- Shift JIS -------------------------- #
 # ---------------[ Unity generated ]------------------ #
 [Ll]ibrary/
 [Tt]emp/
